# ase-mcp

./: .gitignore  .mcp.json.example  INSTALL.md  README.md  SECURITY.md  build_exe.bat  build_package.py  launch_bridge.py  pyproject.toml  requirements.txt  server.py
aseprite-plugin/: ase_bridge.lua  package.json
scripts/: ase-mcp-keepalive.ps1  ase-mcp-remove.ps1  ase-mcp-setup.ps1  ase-mcp-status.ps1  ase-mcp-test.ps1
